[gd_scene load_steps=24 format=3 uid="uid://c5xln5gwhvmby"]

[ext_resource type="Texture2D" uid="uid://buj7i6rrea0yn" path="res://Main/K9/Assets/2D/Sprites/Human/Head.png" id="1_nc3vu"]
[ext_resource type="Script" path="res://Main/K9/Assets/TROOPS/basic_troop_Script.gd" id="1_sd5ys"]
[ext_resource type="Texture2D" uid="uid://dijsynvoqbp6m" path="res://Main/K9/Assets/2D/Sprites/Human/Feet.png" id="2_ljdod"]
[ext_resource type="AudioStream" uid="uid://bi5qnteu6128r" path="res://Main/K9/Assets/Audio/SFX/Death_A.ogg" id="4_02xtc"]
[ext_resource type="AudioStream" uid="uid://ydy8pxwt3yt6" path="res://Main/K9/Assets/Audio/SFX/Death_B.ogg" id="4_t7tfk"]
[ext_resource type="AudioStream" uid="uid://ctri741ilja0" path="res://Main/K9/Assets/Audio/SFX/SwordClang_A.ogg" id="5_4aha7"]

[sub_resource type="CircleShape2D" id="CircleShape2D_wdqng"]
radius = 23.7697

[sub_resource type="Animation" id="Animation_mh6ln"]
resource_name = "Idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Feet:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_ind76"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Feet:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Feet:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_ib11r"]
resource_name = "Walk"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Feet:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Feet:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_l3a0m"]
_data = {
"Idle": SubResource("Animation_mh6ln"),
"RESET": SubResource("Animation_ind76"),
"Walk": SubResource("Animation_ib11r")
}

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_kuhxo"]
polygon = PackedVector2Array(-13, -39, -23, -7, -15, 35, 1, 45, 13, 34, 28, 1, 9, -37)

[sub_resource type="LabelSettings" id="LabelSettings_1nhpi"]
outline_size = 2
outline_color = Color(0, 0, 0, 1)
shadow_size = 3
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(-2, 2)

[sub_resource type="CircleShape2D" id="CircleShape2D_colhv"]
radius = 519.001

[sub_resource type="CircleShape2D" id="CircleShape2D_y0rif"]
radius = 87.0517

[sub_resource type="Gradient" id="Gradient_axruq"]
offsets = PackedFloat32Array(0, 0.483051, 1)
colors = PackedColorArray(0, 1, 0, 1, 1, 1, 0, 1, 1, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_vawt3"]
gradient = SubResource("Gradient_axruq")

[sub_resource type="Curve" id="Curve_cqyks"]
_data = [Vector2(0, 0.428571), 0.0, 0.0, 0, 0, Vector2(0.479452, 0.956044), 0.0, 0.0, 0, 0, Vector2(1, 0.0659341), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_d6dn7"]
curve = SubResource("Curve_cqyks")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_r377p"]
particle_flag_disable_z = true
angle_min = -45.0
angle_max = 45.0
direction = Vector3(0, -1, 0)
spread = 25.0
initial_velocity_min = 100.0
initial_velocity_max = 400.0
gravity = Vector3(0, 296.435, 0)
radial_accel_min = -30.0
radial_accel_max = 60.0
scale_min = 0.0
scale_curve = SubResource("CurveTexture_d6dn7")
color_ramp = SubResource("GradientTexture1D_vawt3")
turbulence_enabled = true
turbulence_noise_strength = 0.25

[sub_resource type="Gradient" id="Gradient_rvwtq"]
offsets = PackedFloat32Array(0, 0.52, 1)
colors = PackedColorArray(0, 0, 0, 0, 0.0466667, 0.0466667, 0.0466667, 0.0466667, 1, 1, 1, 1)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_oxhfu"]
frequency = 0.0031

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_mkpty"]
width = 128
height = 128
seamless = true
color_ramp = SubResource("Gradient_rvwtq")
noise = SubResource("FastNoiseLite_oxhfu")

[node name="BasicTroop" type="CharacterBody2D"]
collision_layer = 0
collision_mask = 12
script = ExtResource("1_sd5ys")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_wdqng")

[node name="Sprites" type="Node2D" parent="."]

[node name="Head" type="Sprite2D" parent="Sprites"]
position = Vector2(0, 1)
rotation = 1.57776
texture = ExtResource("1_nc3vu")

[node name="Feet" type="Sprite2D" parent="Sprites"]
visible = false
modulate = Color(0.392835, 0.875707, 0.954039, 1)
position = Vector2(-2, -3)
rotation = 1.57776
texture = ExtResource("2_ljdod")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprites"]
libraries = {
"": SubResource("AnimationLibrary_l3a0m")
}

[node name="LightOccluder2D" type="LightOccluder2D" parent="Sprites"]
occluder = SubResource("OccluderPolygon2D_kuhxo")

[node name="NavAgent" type="NavigationAgent2D" parent="."]
target_desired_distance = 50.0
path_max_distance = 20.0
avoidance_enabled = true
radius = 30.0
max_neighbors = 5
max_speed = 150.0
avoidance_layers = 3
avoidance_mask = 3
debug_path_custom_color = Color(0.733333, 0.172549, 1, 1)
debug_path_custom_point_size = 2.0

[node name="NameLabel" type="Marker2D" parent="."]

[node name="Name" type="Label" parent="NameLabel"]
offset_left = -22.0
offset_top = -92.0
offset_right = 25.0
offset_bottom = -69.0
text = "Name"
label_settings = SubResource("LabelSettings_1nhpi")

[node name="AttackRadius" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRadius"]
shape = SubResource("CircleShape2D_colhv")
debug_color = Color(2.59906e-06, 0.63579, 0.412909, 0.42)

[node name="HitBox" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(1, -1)
shape = SubResource("CircleShape2D_y0rif")
debug_color = Color(0.647445, 0.521158, 0, 0.42)

[node name="Audio" type="Node" parent="."]

[node name="HurtSFX" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("4_02xtc")
volume_db = -25.0
bus = &"NPCs"

[node name="DeathSFX" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("4_t7tfk")
bus = &"NPCs"

[node name="SwordClash" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("5_4aha7")
volume_db = -25.0
bus = &"NPCs"

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 1.5

[node name="NavTimer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="GoopVfx" type="GPUParticles2D" parent="."]
emitting = false
amount = 16
process_material = SubResource("ParticleProcessMaterial_r377p")
texture = SubResource("NoiseTexture2D_mkpty")
lifetime = 1.5
one_shot = true
explosiveness = 0.75

[connection signal="velocity_computed" from="NavAgent" to="." method="_on_nav_agent_velocity_computed"]
[connection signal="body_entered" from="AttackRadius" to="." method="_on_attack_radius_body_entered"]
[connection signal="timeout" from="AttackTimer" to="." method="attack"]
[connection signal="timeout" from="NavTimer" to="." method="_on_nav_timer_timeout"]
